--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -59,20 +59,31 @@ hist(bank)
 
 average profit = $280
 
-```{r}
-varbank=var(bank)
-lci=mean(bank)-sqrt(var(bank))*1.96
-uci=mean(bank)+sqrt(var(bank))*1.96
-print(lci)
-print(uci)
-```
+The amount of money DR J has to pay is $4.50
+
+
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
 
 
-
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
+
+```{r}
+bank = vector('numeric')
+for (i in 1:100) {
+  bank[i] = BrLw(28, 2, 637)
+}
+meanbank =mean(bank)
+print (mean(bank))
+hist(bank)
+lci=mean(bank)-sqrt(var(bank))*1.96
+uci=mean(bank)+sqrt(var(bank))*1.96
+print(uci)
+print(lci)
+
+```
+
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
 
@@ -84,6 +95,8 @@ print(uci)
 
 
 # Discussion and Conclusion
+28 people in class then then the 2:1 is about fair.
+
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
 
