--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -16,14 +16,9 @@ require(tigerstats)
 require(knitr)
 source(file="BrLw.R")
 ```
-
-
 <!-- We recommend you use git branches -- create a separate branch for each major section i.e. Introduction, Methods, Results, Inferential Results, and Discussion and Conclusions - leave the YAML block untouched until the final merge where you put in your own name !-->
-
 # Introduction
-
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?!-->
-
  At the first day of class there are 35 students in Math Statistics class and professor Brownlow always proposes this bet to his students "I will wager $2 to your bet of $1 that at least two people in today's class have  the same birthday.  He tells me he has made that bet 637 times so far. Where do you think his profits are? Discuss this in a markdown document
  
 Report git commit structure:
@@ -31,72 +26,75 @@ There are 3 questions and there should be at least 3 separate commits, at least 
 1. What are the fair odds for a bet on matching birthdays in a 35 person class.
 2. For what size class is a 2:1 odds bet fair.
 3. How much money would Brownlow be expected to end up with if the bets went as described.
-
 ## Our strategy is to build a Function and the use it to answer the three questions. 
-
 The function will be given a class_size by number of students, odds, and Number_of_times brownlow made the bet.  It will give you back how much Brownlows earnings were. We will use it to answer our three questions below. If you can, improve this function by giving default values to some of its inputs. 
-
 # In the class and payoff as described  If you highered 40 brownlow substitute teachers to do the same thing that Brownlow did then.
 ## what is their average earnings
 ## the standard deviation and a 95% confidence interval for their earnings?
-  
+
 <!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
 
-#1 What are the fair odds for a 35-person class?  
+# 1 What are the fair odds for a 35-person class?
 Assume we do this bet 40 times
+
+# What are the fair odds? Use manipulation of odds in the function to tune Brownlows earnings to zero. 
 
 ```{r}
 bank = vector('numeric')
-for (i in 1:100) {
-  bank[i] = BrLw(35, 2, 637)
+for (i in 1:100) { bank[i] = BrLw(35, 2, 637)
 }
-print (mean(bank))
-hist(bank) 
-
+print(mean(bank))
+hist(bank)
 ```
 
-
-
-average profit = $280
-
-The amount of money DR J has to pay is $4.50
-
-
-
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
+average profit = $28 per class
+
+
+
+
+# What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
+# What are the fair odds? Use manipulation of odds in the function to tune Brownlows earnings to zero. 
+
+<!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
+```{r}
+bank = vector('numeric')
+for (i in 1:100) {
+  bank[i] = BrLw(35, 4.5,637)
+}
+meanbank =mean(bank)
+print(mean(bank))
+hist(bank)
+lci = mean(bank)-sqrt(var(bank))*1.96
+uci = mean(bank)+sqrt(var(bank))*1.96
+print(uci)
+print(lci)
+```
+<!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
+
+The amount of money Dr. J has to pay would be $4.50.
 
 
 
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
 
+<!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
 ```{r}
 bank = vector('numeric')
 for (i in 1:100) {
-  bank[i] = BrLw(28, 2, 637)
+  bank[i] = BrLw(28, 2,637)
 }
 meanbank =mean(bank)
-print (mean(bank))
+print(mean(bank))
 hist(bank)
-lci=mean(bank)-sqrt(var(bank))*1.96
-uci=mean(bank)+sqrt(var(bank))*1.96
+lci = mean(bank)-sqrt(var(bank))*1.96
+uci = mean(bank)+sqrt(var(bank))*1.96
 print(uci)
 print(lci)
-
 ```
-
-
-<!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
-
-
-
-
-
 
 
 
 # Discussion and Conclusion
-28 people in class then then the 2:1 is about fair.
-
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
-
