--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -92,6 +92,7 @@ The amount of money Dr. J has to pay would be $4.50.
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
 
 <!--Explain and display the results of your method of coming up with the estimate of professor Brownlows betting profits!-->
+
 ```{r}
 bank = vector('numeric')
 for (i in 1:100) {
@@ -111,3 +112,5 @@ print(lci)
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here.  If professor Brownlow is consistantly making or losing money how could he change his payout so that his profits center on zero?  Also discuss what size his class should be in order to have his current scheme balance at zero profit.!-->
+
+28 people in class 2:1 bet is about fair.
